--- a/Areas/Sale/Views/HopDongs/updateHopDong.cshtml
+++ b/Areas/Sale/Views/HopDongs/updateHopDong.cshtml
@@ -57,6 +57,12 @@
                 <span asp-validation-for="MaDV" class="text-danger"></span>
             </div>
 
+            <div class="form-group">
+                <label asp-for="GhiChu" class="control-label"></label>
+                <input asp-for="GhiChu" class="form-control" />
+                <span asp-validation-for="GhiChu" class="text-danger"></span>
+            </div>
+
             <h4>Chi tiết đặt tiệc</h4>
             <table class="table table-bordered" id="chiTietMonTable">
                 <thead>
